# Matheel

./: Matheel_Demo_Notebook.ipynb  readme.md  setup.cfg
Matheel/: cli.py
gradio_app/: app.py  requirements.txt
