[metadata]
name = Matheel
version = 0.1.0
author = Fahad Ebrahim
description = Matheel: A CLI and Python package for source-code similarity detection.
license = CC BY-NC 4.0
url = https://github.com/FahadEbrahim/Matheel
project_urls =
    Source = https://github.com/FahadEbrahim/Matheel
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    click
    gradio
    pandas
    numpy
    rapidfuzz
    sentence-transformers
    sentencepiece

[options.entry_points]
console_scripts =
    matheel = Matheel.cli:main
